# liberasurecode

./: Cargo.toml  build.rs  erasurecode_wrapper.c  install_deps.sh
src/: c_api.rs  lib.rs
