[package]
edition = "2018"
name = "liberasurecode"
version = "1.0.3"
authors = ["The FrugalOS Developers"]
links = "erasurecode"
build = "build.rs"
description = "A Rust wrapper for `openstack/liberasurecode`"
homepage = "https://github.com/frugalos/liberasurecode"
repository = "https://github.com/frugalos/liberasurecode"
readme = "README.md"
keywords = ["erasure-coding"]
categories = ["api-bindings", "encoding"]
license = "MIT"

[badges]
travis-ci = {repository = "frugalos/liberasurecode"}

[build-dependencies]
cc = "1.0"

[dependencies]
libc = "0.2"
packed_struct = "0.10"
crossbeam = "0.8"
rayon = "1.5"
